# ai-rogan

./: .env.example  AGENTS.md  README.md  deploy.sh  package-lock.json  package.json
app/: page.tsx
backend/: README.md  generator.py  ingestor.py  main.py  pyproject.toml
